<resources>
    <string name="app_name">GradeFinder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cbse">CBSE</string>
    <string name="icsc">ICSC</string>
    <string name="sslc">SSLC</string>
    <string name="title_activity_cbse">ADD NEW CBSE FIELD</string>
    <string name="title_activity_icsc">ADD NEW ICSC FIELD</string>
    <string name="title_activity_sslc">ADD NEW SSLC FIELD</string>
    <string name="lvalue">Lower marks</string>
    <string name="uvalue">Upper marks</string>
    <string name="grade">Grade</string>
    <string name="fields_num">Enter The No.of Fields</string>
    <string name="submit">SUBMIT</string>
    <string name="confirm">CONFIRM</string>
    <string name="continue_modify">CONTINUE TO MODIFY</string>
    <string name="confirm_modify">CONFIRM MODIFICATION</string>
    <string name="confirm_delete">CONFIRM DELETION</string>
    <string name="class1">CLASS:</string>
    <string name="name">NAME:</string>
    <string name="enter_mark">Enter Marks For Each Subject:</string>
    <string name="sub1">SUBJECT 1</string>
    <string name="sub2">SUBJECT 2</string>
    <string name="sub3">SUBJECT 3</string>
    <string name="sub4">SUBJECT 4</string>
    <string name="sub5">SUBJECT 5</string>
    <string name="eval">EVALUATE</string>
    <string name="spinner_prompt">Select Class</string>
    <string name="spinner_prompt1">Select Syllabus</string>
    <string name="save">SAVE</string>
    <string name="grade_card">GRADE CARD</string>
    <string name="add_new">ADD NEW MARK FIELD</string>
    <string name="modify">MODIFY EXISTING FIELD</string>
    <string name="delete">DELETE EXISTING FIELD</string>
    <string name="modify_hint">Enter Grade Of Field To Be Modified</string>
    <string name="modify_title">MODIFY GRADE SYSTEM</string>
    <string name="delete_title">DELETE GRADE FIELD</string>
    <string name="delete_hint">Enter Grade Of Field Tb Be Modified</string>
    <string name="hint_changeLang">SELECT LANGUAGE</string>
    <string name="hint_eng">ENGLISH</string>
    <string name="hint_arabic">ARABIC</string>
    <string name="hint_hindi">HINDI</string>
    <string name="please_enter_name">Please Enter A Valid Name</string>
    <string name="enter_sub1">Please Enter Marks For Subject 1!!</string>
    <string name="enter_sub2">Please Enter Marks For Subject 2!!</string>
    <string name="enter_sub3">Please Enter Marks For Subject 3!!</string>
    <string name="enter_sub4">Please Enter Marks For Subject 4!!</string>
    <string name="enter_sub5">Please Enter Marks For Subject 5!!</string>
    <string name="enter_valid_marks">Please Enter Valid Marks Only!!</string>
    <string name="adding_student">Adding Student Information....</string>
    <string name="enter_lvalue">Please Enter Lower Mark Value</string>
    <string name="enter_uvalue">Please Enter Upper Mark Value</string>
    <string name="enter_grade">Please Enter THE Corresponding Grade</string>
    <string name="enter_valid_grade">Please Enter Valid Grade</string>
    <string name="enter_value">Please Enter A Value!!</string>
    <string name="logout">Logout</string>
    <string name="user_login">User Login</string>
</resources>
