<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:padding="16dp"
            style="@style/arabText"
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            />

    <Spinner
        style="@style/arabText"
        android:padding="16dp"
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:prompt="@string/spinner_prompt1"
        android:descendantFocusability="blocksDescendants"
        />



    <Spinner
            android:padding="16dp"
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/spinner_prompt"
            android:descendantFocusability="blocksDescendants"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_mark"
            android:textSize="16sp"
            android:paddingTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/sub1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub1"
                    android:inputType="number"
                    android:padding="16dp" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/sub2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub2"
                    android:inputType="number"
                    android:padding="16dp" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/sub3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub3"
                    android:inputType="number"
                    android:padding="16dp" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/sub4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub4"
                    android:inputType="number"
                    android:padding="16dp" />

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/sub5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub5"
                    android:inputType="number"
                    android:padding="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/grade_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/grade1"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp" />

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp"
                    android:id="@+id/grade2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp" />

                <TextView
                    android:layout_marginTop="8dp"
                    android:id="@+id/grade3"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                     />

                <TextView
                    android:layout_marginTop="8dp"
                    android:id="@+id/grade4"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/grade5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                   />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/totGrade_Textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/eval_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/eval"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:id="@+id/save_button"
            />

        </LinearLayout>
    </LinearLayout>

</ScrollView>