<RelativeLayout
    android:id="@+id/syllabus"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/holo_purple"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <EditText
            android:id="@+id/input_field_number"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/fields_num"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_marginLeft="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:orientation="vertical"
        android:background="@android:color/background_light"
        android:layout_centerInParent="true"
        >

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>


</RelativeLayout>