<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/holo_purple"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/child1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <EditText
            android:id="@+id/modify_grade_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:hint="@string/modify_hint"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/submit_button_modify"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp" />

    </LinearLayout>

   <LinearLayout
       android:id="@+id/show_modify"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/child1"
       android:padding="16dp">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/lower_mark_modify"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/upper_mark_modify"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/grade_modify"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

   </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_modify"
        android:orientation="vertical"
        android:background="@android:color/background_light"
        android:layout_centerInParent="true"
        >



        <Button
            android:id="@+id/continue_modify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_modify"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>


    <Button
        android:id="@+id/confirm_modify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_modify"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />


</RelativeLayout>